--- a/Darianne.html
+++ b/Darianne.html
@@ -14,14 +14,14 @@
 <link rel="stylesheet" type="text/css" href="secondary.css">
 <header>
 
-<h1><center>Insert header name here </center></b></h1>
+<h1><center>Jamaica - Heartbeat of the Carribean</center></b></h1>
 
 
 <nav>
    <ul>
-       <li><a href="#One">Placeholder</a></li>
-       <li><a href="#Two">Placeholder</a></li>
-       <li><a href="groupProject.html">Homepage</a></li>
+       <li><a href="#One">History of Jamaican Jerk Chicken</a></li>
+       <li><a href="#Two">Let's Get Cooking</a></li>
+       <li><a href="groupProject.html">Return Home</a></li>
       
    </ul>
 </nav>
@@ -30,221 +30,92 @@
 
 
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+   style>
+    .flag {
+      width: 300px;
+      height: 200px;
+      background-image: url('darianne - jamaican flag.jpg');
+      background-size: cover;
+      background-position: center;
+      border: 2px solid #000;
+    }
+  </style>
 <br>
 
 
-
-
-
-<div id="One">
-<h2><center>This is a placeholder</center></h2>
-<p></p>
+<div id="History of Jamaica and Jerk Chicken">
+<h2><center>The Spices are Scared</center></h2>
+<p>Jerk cooking originated with the Maroons — escaped enslaved Africans who fled to Jamaica’s mountains. They combined African cooking traditions with 
+   indigenous Taino techniques to create jerk as a form of cultural preservation and survival.
+   Jamaican Jerk Chicken is a bold and spicy dish from Jamaica, made by marinating chicken in a mix of hot peppers, 
+   spices, and herbs, then grilling it for that smoky, charred flavor. "Jerk" refers to the cooking style and the spicy seasoning — it's full of heat, 
+   sweetness, and island vibes.
+</p>
 </div>
 
 
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+   <style>
+    .flag {
+      width: 300px;
+      height: 200px;
+      background-image: url('Jerk Chicken.jpeg');
+      background-size: cover;
+      background-position: center;
+      border: 2px solid #000;
+    }
+  </style>
 <br>
 
 
-
-
-
-<div id="Two">
-<h2><center>This is a placeholder</center></h2>
-<p></p>
+<div id="Let's Get Cooking">
+<h2><center>What You Need!</center></h2>
+<ul class="ingredients">
+  <li>1.5 to 2 lbs chicken (thighs, drumsticks, or breast)</li>
+  <li>2 tsp allspice</li>
+  <li>1 tsp thyme</li>
+  <li>1 tsp cinnamon</li>
+  <li>1 tsp black pepper</li>
+  <li>1.5 tsp brown sugar</li>
+  <li>½ tsp salt</li>
+  <li>2 cloves garlic (minced)</li>
+  <li>1 small onion (chopped)</li>
+  <li>1 scotch bonnet pepper</li>
+  <li>2 tbsp vinegar</li>
+  <li>2 tbsp soy sauce</li>
+  <li>1 tbsp oil</li>
+</ul>
 </div>
 
+<br>
+<br>
+<div class="preparation">
+  <h2><center>How To Make It!</center></h2>
+  <h2>Preparation</h2>
+  
+  <h3>Marinade:</h3>
+  <ul>
+    <li>Blend or mix all ingredients (except chicken) to make a marinade. You can use a food processor or do it by hand.</li>
+    <li>Marinate chicken in the mixture for at least 2 hours (overnight is best!).</li>
+  </ul>
+
+  <h3>Cook the chicken:</h3>
+  <ul>
+    <li><strong>Grill, bake, or pan-fry:</strong></li>
+    <ul>
+      <li><strong>Grill:</strong> Medium-high heat, 6–8 mins per side</li>
+      <li><strong>Oven:</strong> 400°F (200°C) for 35–45 mins</li>
+      <li><strong>Pan:</strong> Medium heat, brown until fully cooked through</li>
+    </ul>
+  </ul>
+
+  <p><strong>Serve with:</strong> rice & peas, plantains, or a side salad.</p>
+</div>
+
+
+
+
+   
 <footer><p> hi i am just the footer eheheh </p>
         <br>
         <br>
@@ -256,4 +127,3 @@
 
 </body>
 </html>
-
