--- a/groupProject.html
+++ b/groupProject.html
@@ -26,6 +26,7 @@
        <li><a href="#Jaali">Jaali</a></li>
        <li><a href="#Aboubacar">Aboubacar</a></li>
        <li><a href="#Tiryn">Tiryn</a></li>
+      <li><a href="DeCamre">Tiryn</a></li>
    </ul>
 </nav>
 
