--- a/Darianne.html
+++ b/Darianne.html
@@ -2,258 +2,150 @@
 <html>
 
 <head>
-<title> Jamaica - Heartbeat of the Carribean</title>
-<link rel="icon" type="image/x-icon" href="C:\Users\sincl\Downloads\Group project\image2\darianne - jerk chicken.jpg">
+  <title>Jamaica - Heartbeat of the Caribbean</title>
+  <link rel="icon" type="image/x-icon" href="Jerk Chicken.jpeg">
+  <link rel="stylesheet" type="text/css" href="secondary.css">
 
+  <style>
+    body {
+      margin: 0;
+      padding-top: 60px;
+      background-image: url('https://cdn.britannica.com/20/5120-050-4202E1B8/Flag-Jamaica.jpg');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      color: white;
+    }
+  
+    h1, h2, h3, p, ul {
+      margin-top: 0;
+      margin-bottom: 0px;
+    }
+  
+    ul {
+      padding-left: 0;
+      list-style-position: inside;
+    }
+  
+    img {
+      margin-bottom: 10px;
+    }
+  
+    iframe {
+      margin-top: 10px;
+    }
+  
+    nav ul {
+      list-style-type: none;
+      padding: 0;
+    }
+  
+    nav ul li {
+      display: inline;
+      margin-right: 20px;
+    }
+  
+    nav a {
+      color: white;
+      text-decoration: none;
+    }
+
+    nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Slight transparency, optional */
+  z-index: 1000; /* Keeps it on top of other elements */
+  padding: 10px 0;
+}
+
+
+  </style>
+  
 </head>
 
+<body>
+  <header>
+    <h1 style="text-align: center;">Jamaica - Heartbeat of the Caribbean</h1>
 
-<body bgcolor="orange">
-<br>
-<br>
-<link rel="stylesheet" type="text/css" href="secondary.css">
-<header>
+    <nav>
+      <ul>
+        <li><a href="#One">History of Jamaican Jerk Chicken</a></li>
+        <li><a href="#Two">Let's Get Cooking</a></li>
+        <li><a href="groupProject.html">Return Home</a></li>
+      </ul>
+    </nav>
+  </header>
 
-<h1><center>Insert header name here </center></b></h1>
+  <div id="History of Jamaica and Jerk Chicken">
+    <h2 style="text-align: center;">The Spices are Sacred</h2>
+    <p>Jerk cooking originated with the Maroons — escaped enslaved Africans who fled to Jamaica’s mountains. They combined African cooking traditions with indigenous Taino techniques to create jerk as a form of cultural preservation and survival.
+      Jamaican Jerk Chicken is a bold and spicy dish from Jamaica, made by marinating chicken in a mix of hot peppers, spices, and herbs, then grilling it for that smoky, charred flavor. "Jerk" refers to the cooking style and the spicy seasoning — it's full of heat,
+      sweetness, and island vibes.
+    </p>
+  </div>
 
+  <div id="Let's Get Cooking">
+    <h2 style="text-align: center;">What You Need!</h2>
+    <ul class="ingredients">
+      <li>1.5 to 2 lbs chicken (thighs, drumsticks, or breast)</li>
+      <li>2 tsp allspice</li>
+      <li>1 tsp thyme</li>
+      <li>1 tsp cinnamon</li>
+      <li>1 tsp black pepper</li>
+      <li>1.5 tsp brown sugar</li>
+      <li>½ tsp salt</li>
+      <li>2 cloves garlic (minced)</li>
+      <li>1 small onion (chopped)</li>
+      <li>1 scotch bonnet pepper</li>
+      <li>2 tbsp vinegar</li>
+      <li>2 tbsp soy sauce</li>
+      <li>1 tbsp oil</li>
+    </ul>
+  </div>
+<br>
+  <div class="preparation">
+    <h2 style="text-align: center;">How To Make It!</h2>
+    <h2>Preparation</h2>
 
-<nav>
-   <ul>
-       <li><a href="#One">Placeholder</a></li>
-       <li><a href="#Two">Placeholder</a></li>
-       <li><a href="groupProject.html">Homepage</a></li>
-      
-   </ul>
-</nav>
+    <h3>Marinade:</h3>
+    <ul>
+      <li>Blend or mix all ingredients (except chicken) to make a marinade. You can use a food processor or do it by hand.</li>
+      <li>Marinate chicken in the mixture for at least 2 hours (overnight is best!).</li>
+    </ul>
 
-</header>
+    <br>
 
+    <h3>Cook the chicken:</h3>
+    <ul>
+      <li><strong>Grill, bake, or pan-fry:</strong>
+        <ul>
+          <li><strong>Grill:</strong> Medium-high heat, 6–8 mins per side</li>
+          <li><strong>Oven:</strong> 400°F (200°C) for 35–45 mins</li>
+          <li><strong>Pan:</strong> Medium heat, brown until fully cooked through</li>
+        </ul>
+      </li>
+    </ul>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+    <img src="https://media.istockphoto.com/id/538643574/photo/spicy-grilled-jerk-chicken.jpg?s=1024x1024&w=is&k=20&c=kvsUDnib0D8H66hTq8rplJ-GOMn-MTwjn4sWJa8znjw=" alt="Jerk Chicken" style="display: block; margin: 0 auto; max-width: 50%; height: auto;">
+  </div>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+  <br>
 
-
-
-
-
-<div id="One">
-<h2><center>This is a placeholder</center></h2>
-<p></p>
-</div>
-
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
-
-
-
-<div id="Two">
-<h2><center>This is a placeholder</center></h2>
-<p></p>
-</div>
-
-<footer><p> hi i am just the footer eheheh </p>
-        <br>
-        <br>
-        <br>
-        <br>
-        <p> insert something here</p>
-</footer>
-
-
+  <footer>
+    <h2 style="text-align: center;">Check out this video for some guided help!</h2>
+    <div style="display: flex; justify-content: center;">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/0OACUr1V9XI?si=BzVi4ZoYckIcOuFE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    </div>
+  </footer>
+  
 </body>
+
 </html>
+
+
+
+
+
+
 
