--- a/Djamila.html
+++ b/Djamila.html
@@ -1,259 +1,104 @@
-<!DOCTYPE HTML>
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title> A Food trip around the world</title>
-<link rel="icon" type="image/x-icon" href="image2/food.jpg">
+  <meta charset="UTF-8">
+  <title>BURKINA FASO - Tô Dish</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-image:url('https://upload.wikimedia.org/wikipedia/commons/3/31/Flag_of_Burkina_Faso.svg');
+      background-size: cover;;
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+      color: white;
+    }
 
+    nav {
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 15px;
+      text-align: center;
+      font-size: 2em;
+      font-weight: bold;
+      letter-spacing: 2px;
+    }
+
+    .container {
+      background-color: rgba(0, 0, 0, 0.6);
+      margin: 20px auto;
+      padding: 20px;
+      max-width: 800px;
+      border-radius: 10px;
+    }
+
+    img {
+      width: 100%;
+      max-height: 400px;
+      object-fit: cover;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+
+    h2 {
+      margin-top: 0;
+      color: #FFD700;
+    }
+
+    ul {
+      list-style-type: square;
+      padding-left: 20px;
+    }
+
+    iframe {
+      width: 100%;
+      height: 400px;
+      border: none;
+      border-radius: 10px;
+      margin-top: 20px;
+    }
+  </style>
 </head>
-
-
-<body bgcolor="orange">
-<br>
-<br>
-<link rel="stylesheet" type="text/css" href="secondary.css">
+<body>
 <header>
-
-<h1><center>Insert header name here </center></b></h1>
-
+<h1 style="text-align: center;">Burkina Faso</h1>
 
 <nav>
-   <ul>
-       <li><a href="#One">Placeholder</a></li>
-       <li><a href="#Two">Placeholder</a></li>
-       <li><a href="groupProject.html">Homepage</a></li>
-      
-   </ul>
+<ul>
+<li><a href="groupProject.html">Return Home</a></li>
+</ul>
 </nav>
-
 </header>
+    <div class="container">
+    <img src="TO.png" alt="Tô Dish">
 
+    <h2>About the Dish - Tô</h2>
+    <p>
+      Tô is a staple in Burkinabé cuisine, deeply rooted in the country's agricultural heritage. 
+      This dish is a thick porridge made from millet, sorghum, or maize flour, reflecting the grains 
+      predominantly cultivated in the region. Tô is typically served with a variety of sauces prepared 
+      from vegetables, meats, or fish, making it a versatile and nourishing meal. Its preparation and 
+      communal consumption underscore the importance of togetherness in Burkinabé culture.
+    </p>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>Millet, sorghum, or maize flour</li>
+      <li>Water</li>
+      <li>Salt (optional)</li>
+    </ul>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+    <h2>Preparation</h2>
+    <ul>
+      <li>Boil water in a large pot.</li>
+      <li>Gradually add the chosen flour, stirring continuously to prevent lumps.</li>
+      <li>Cook and stir until the mixture thickens to a dough-like consistency.</li>
+      <li>Serve with a preferred sauce, such as vegetable stew or meat-based gravy.</li>
+    </ul>
 
-
-
-
-
-<div id="One">
-<h2><center>This is a placeholder</center></h2>
-<p></p>
-</div>
-
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
-
-
-
-<div id="Two">
-<h2><center>This is a placeholder</center></h2>
-<p></p>
-</div>
-
-<footer><p> hi i am just the footer eheheh </p>
-        <br>
-        <br>
-        <br>
-        <br>
-        <p> insert something here</p>
-</footer>
-
-
+    <h2>Watch How to Make Tô</h2>
+    <iframe src="https://www.youtube.com/embed/xdPggEh1azw" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
 </body>
 </html>
 
