--- a/Apofiah.html
+++ b/Apofiah.html
@@ -1,34 +1,104 @@
-<!DOCTYPE HTML>
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title> A Food trip around the world</title>
-<link rel="icon" type="image/x-icon" href="image2/food.jpg">
-
+  <meta charset="UTF-8">
+  <title>Italy: Pasta al Pomodoro</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-image: url('https://upload.wikimedia.org/wikipedia/en/0/03/Flag_of_Italy.svg');
+      background-size: cover;
+      background-repeat: repeat;
+      background-attachment: fixed;
+      color: #000;
+      padding: 20px;
+    }
+    .container {
+      background-color: rgba(255, 255, 255, 0.9); /* white with slight transparency for readability */
+      padding: 20px;
+      border-radius: 10px;
+      max-width: 800px;
+      margin: auto;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    }
+    nav a {
+      text-decoration: none;
+      font-weight: bold;
+      color: #006400;
+      background: #ffffffcc;
+      padding: 8px 12px;
+      border-radius: 8px;
+      display: inline-block;
+      margin-bottom: 20px;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 10px;
+    }
+  </style>
 </head>
+<body>
+  <nav>
+    <a href="#italy">Italy</a>
+  </nav>
 
+  <div class="container">
+    <div id="italy" class="section">
+      <h2>Italy: Pasta al Pomodoro</h2>
+      <img src="pasta_al_pomodoro.jpg" alt="Pasta al Pomodoro - Italian Dish" width="400">
 
-<body bgcolor="orange">
-<br>
-<br>
-<link rel="stylesheet" type="text/css" href="secondary.css">
-<header>
+      <p>
+        Pasta is the heart of Italian cuisine, with recipes dating back to ancient times.
+        <strong>Pasta al Pomodoro</strong> (pasta with tomato sauce) is a staple dish, highlighting Italy’s love
+        for fresh, high-quality ingredients. This dish represents the Mediterranean diet and the importance
+        of simplicity in Italian cooking. It is commonly enjoyed as a comforting meal at home or as a quick
+        yet delicious restaurant dish.
+      </p>
 
-<h1><center>Insert header name here </center></b></h1>
+      <h3>Ingredients</h3>
+      <ul>
+        <li>250g (8.8 oz) spaghetti or other pasta</li>
+        <li>2 tbsp olive oil</li>
+        <li>2 cloves garlic, minced</li>
+        <li>400g (14 oz) canned San Marzano tomatoes (or fresh, peeled tomatoes)</li>
+        <li>Salt & black pepper</li>
+        <li>1/2 tsp sugar (optional, to balance acidity)</li>
+        <li>5–6 fresh basil leaves</li>
+        <li>Grated Parmesan cheese (optional)</li>
+      </ul>
 
+      <h3>Preparation</h3>
+      <ol>
+        <li><strong>Cook the Pasta:</strong> Boil salted water in a large pot and cook pasta according to package instructions until al dente.</li>
+        <li><strong>Prepare the Sauce:</strong> In a large pan, heat olive oil over medium heat.</li>
+        <li>Add minced garlic and sauté until fragrant (about 30 seconds).</li>
+        <li>Pour in the canned or fresh tomatoes, crushing them with a spoon.</li>
+        <li>Simmer the sauce for about 15–20 minutes, stirring occasionally.</li>
+        <li>Add salt, pepper, and sugar if needed.</li>
+        <li>Drain the pasta and add it directly to the sauce.</li>
+        <li>Toss everything together, allowing the flavors to blend for 2–3 minutes.</li>
+        <li>Stir in fresh basil leaves.</li>
+        <li>Serve hot, topped with Parmesan cheese if desired.</li>
+      </ol>
 
-<nav>
-   <ul>
-       <li><a href="#One">Placeholder</a></li>
-       <li><a href="#Two">Placeholder</a></li>
-       <li><a href="groupProject.html">Homepage</a></li>
-      
-   </ul>
-</nav>
+      <p>
+        Pasta al Pomodoro is often paired with a simple green salad and a glass of Chianti or Pinot Grigio wine.
+        It can be served as a first course (<em>primo piatto</em>) in a traditional Italian meal, followed by a meat or fish dish.
+      </p>
 
-</header>
-
-
+      <h3>Watch How to Make Pasta al Pomodoro</h3>
+      <iframe width="560" height="315" 
+        src="https://www.youtube.com/embed/NIgKvlAYOdU" 
+        title="How to Make Pasta al Pomodoro" 
+        frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen>
+      </iframe>
+    </div>
+  </div>
+</body>
+</html>
 <br>
 <br>
 <br>
