--- a/Darianne.html
+++ b/Darianne.html
@@ -69,12 +69,17 @@
     <h1 style="text-align: center;">Jamaica - Heartbeat of the Caribbean</h1>
 
     <nav>
-      <ul>
-        <li><a href="#One">History of Jamaican Jerk Chicken</a></li>
-        <li><a href="#Two">Let's Get Cooking</a></li>
-        <li><a href="groupProject.html">Return Home</a></li>
-      </ul>
-    </nav>
+    <ul>
+      <li><a href="#">Apofiah</a></li>
+      <li><a href="#">Darianne</a></li>
+      <li><a href="#">Djamila</a></li>
+      <li><a href="#">India</a></li>
+      <li><a href="#">Jaali</a></li>
+      <li><a href="#">Aboubacar</a></li>
+      <li><a href="#">Tiryn</a></li>
+      <li><a href="DeCamre.html">De'Camre</a></li>
+    </ul>
+  </nav>
   </header>
 
   <div id="History of Jamaica and Jerk Chicken">
