--- a/Djamila.html
+++ b/Djamila.html
@@ -64,10 +64,18 @@
 <h1 style="text-align: center;">Burkina Faso</h1>
 
 <nav>
-<ul>
-<li><a href="groupProject.html">Return Home</a></li>
-</ul>
+   <ul>
+       <li><a href="#Apofiah.html">Apofiah</a></li>
+       <li><a href="#Darianne.html">Darianne</a></li>
+       <li><a href="#Djamila.html">Djamila</a></li>
+       <li><a href="#India.html">India</a></li>
+       <li><a href="#Jaali.html">Jaali</a></li>
+       <li><a href="#Aboubacar.html">Aboubacar</a></li>
+       <li><a href="#Tiryn.html">Tiryn</a></li>
+      <li><a href="DeCamre.html">Tiryn</a></li>
+   </ul>
 </nav>
+
 </header>
     <div class="container">
     <img src="TO.png" alt="Tô Dish">
