--- a/Apofiah.html
+++ b/Apofiah.html
@@ -40,8 +40,18 @@
 </head>
 <body>
   <nav>
-    <a href="#italy">Italy</a>
-  </nav>
+   <ul>
+       <li><a href="#Apofiah.html">Apofiah</a></li>
+       <li><a href="#Darianne.html">Darianne</a></li>
+       <li><a href="#Djamila.html">Djamila</a></li>
+       <li><a href="#India.html">India</a></li>
+       <li><a href="#Jaali.html">Jaali</a></li>
+       <li><a href="#Aboubacar.html">Aboubacar</a></li>
+       <li><a href="#Tiryn.html">Tiryn</a></li>
+      <li><a href="DeCamre.html">Tiryn</a></li>
+   </ul>
+</nav>
+
 
   <div class="container">
     <div id="italy" class="section">
