--- a/Darianne.html
+++ b/Darianne.html
@@ -69,17 +69,17 @@
     <h1 style="text-align: center;">Jamaica - Heartbeat of the Caribbean</h1>
 
     <nav>
-    <ul>
-      <li><a href="#">Apofiah</a></li>
-      <li><a href="#">Darianne</a></li>
-      <li><a href="#">Djamila</a></li>
-      <li><a href="#">India</a></li>
-      <li><a href="#">Jaali</a></li>
-      <li><a href="#">Aboubacar</a></li>
-      <li><a href="#">Tiryn</a></li>
-      <li><a href="DeCamre.html">De'Camre</a></li>
-    </ul>
-  </nav>
+   <ul>
+       <li><a href="Apofiah.html">Apofiah</a></li>
+       <li><a href="Darianne.html">Darianne</a></li>
+       <li><a href="Djamila.html">Djamila</a></li>
+       <li><a href="India.html">India</a></li>
+       <li><a href="Jaali.html">Jaali</a></li>
+       <li><a href="Aboubacar.html">Aboubacar</a></li>
+       <li><a href="Tiryn.html">Tiryn</a></li>
+      <li><a href="DeCamre.html">DeCamre</a></li>
+   </ul>
+</nav>
   </header>
 
   <div id="History of Jamaica and Jerk Chicken">
