--- a/DeCamre.html
+++ b/DeCamre.html
@@ -242,17 +242,17 @@ article{
     <div class="wave"></div>
  </div>
   <nav>
-    <ul>
-      <li><a href="#">Apofiah</a></li>
-      <li><a href="#">Darianne</a></li>
-      <li><a href="#">Djamila</a></li>
-      <li><a href="#">India</a></li>
-      <li><a href="#">Jaali</a></li>
-      <li><a href="#">Aboubacar</a></li>
-      <li><a href="#">Tiryn</a></li>
-      <li><a href="DeCamre.html">De'Camre</a></li>
-    </ul>
-  </nav>
+   <ul>
+       <li><a href="Apofiah.html">Apofiah</a></li>
+       <li><a href="Darianne.html">Darianne</a></li>
+       <li><a href="Djamila.html">Djamila</a></li>
+       <li><a href="India.html">India</a></li>
+       <li><a href="Jaali.html">Jaali</a></li>
+       <li><a href="Aboubacar.html">Aboubacar</a></li>
+       <li><a href="Tiryn.html">Tiryn</a></li>
+      <li><a href="DeCamre.html">DeCamre</a></li>
+   </ul>
+</nav>
 
   <div class="content">
     <span class ="text1"><h1>USA: <span class="B">"Biscuits</span> and <span class="G">Gravy</span></h1></span>
