--- a/Apofiah.html
+++ b/Apofiah.html
@@ -41,14 +41,14 @@
 <body>
   <nav>
    <ul>
-       <li><a href="#Apofiah.html">Apofiah</a></li>
-       <li><a href="#Darianne.html">Darianne</a></li>
-       <li><a href="#Djamila.html">Djamila</a></li>
-       <li><a href="#India.html">India</a></li>
-       <li><a href="#Jaali.html">Jaali</a></li>
-       <li><a href="#Aboubacar.html">Aboubacar</a></li>
-       <li><a href="#Tiryn.html">Tiryn</a></li>
-      <li><a href="DeCamre.html">Tiryn</a></li>
+       <li><a href="Apofiah.html">Apofiah</a></li>
+       <li><a href="Darianne.html">Darianne</a></li>
+       <li><a href="Djamila.html">Djamila</a></li>
+       <li><a href="India.html">India</a></li>
+       <li><a href="Jaali.html">Jaali</a></li>
+       <li><a href="Aboubacar.html">Aboubacar</a></li>
+       <li><a href="Tiryn.html">Tiryn</a></li>
+      <li><a href="DeCamre.html">DeCamre</a></li>
    </ul>
 </nav>
 
