--- a/groupProject.html
+++ b/groupProject.html
@@ -1201,7 +1201,7 @@ Each image tells a story, whether it's a home-cooked family recipe passed down t
 
 
 
-<footer><p> hi i am just the footer eheheh </p>
+<footer><p> Contact us if you got any questions </p>
         <br>
         <br>
         <br>
