--- a/India.html
+++ b/India.html
@@ -1,259 +1,116 @@
-<!DOCTYPE HTML>
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title> A Food trip around the world</title>
-<link rel="icon" type="image/x-icon" href="image2/food.jpg">
+  <meta charset="UTF-8">
+  <title>INDIA - Dal Makhani</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-image:url('https://upload.wikimedia.org/wikipedia/commons/b/bc/Flag_of_India.png');
+      background-size: cover;;
+      background-size: cover;
+      background-position: center;
+      background-attachment: fixed;
+      color: white;
+    }
 
+    nav {
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 15px;
+      text-align: center;
+      font-size: 2em;
+      font-weight: bold;
+      letter-spacing: 2px;
+    }
+
+    .container {
+      background-color: rgba(0, 0, 0, 0.6);
+      margin: 20px auto;
+      padding: 20px;
+      max-width: 800px;
+      border-radius: 10px;
+    }
+
+    img {
+      width: 100%;
+      max-height: 400px;
+      object-fit: cover;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+
+    h2 {
+      margin-top: 0;
+      color: #FFD700;
+    }
+
+    ul {
+      list-style-type: square;
+      padding-left: 20px;
+    }
+
+    iframe {
+      width: 100%;
+      height: 400px;
+      border: none;
+      border-radius: 10px;
+      margin-top: 20px;
+    }
+  </style>
 </head>
+<body>
+    <nav>
+        <ul>
+            <li><a href="Apofiah.html">Apofiah</a></li>
+            <li><a href="Darianne.html">Darianne</a></li>
+            <li><a href="Djamila.html">Djamila</a></li>
+            <li><a href="India.html">India</a></li>
+            <li><a href="Jaali.html">Jaali</a></li>
+            <li><a href="Aboubacar.html">Aboubacar</a></li>
+            <li><a href="Tiryn.html">Tiryn</a></li>
+           <li><a href="DeCamre.html">DeCamre</a></li>
+        </ul>
+     </nav>
 
+  <div class="container">
+    <img src="https://media.istockphoto.com/id/1170374719/photo/dal-makhani-at-dark-background.jpg?s=1024x1024&w=is&k=20&c=FVifOSqCkW0GdMqUmgddvJ6xKd4F6touOC4gVfrVT5c=" alt="Tô Dish">
 
-<body bgcolor="orange">
-<br>
-<br>
-<link rel="stylesheet" type="text/css" href="secondary.css">
-<header>
+    <h2>About the Dish - Dal Makhani</h2>
+    <p>
+      Dal Makhani is a rich and creamy North Indian dish made with whole black lentils (urad dal) and a small amount of kidney beans (rajma). The name "makhani" means "buttery", and the dish is known for its velvety texture, deep flavor, and slow-cooked goodness. It's simmered in spices, tomatoes, and butter or cream, giving it that signature luxurious taste. This dish is a beloved comfort food in many Indian households. 
+    </p>
 
-<h1><center>Insert header name here </center></b></h1>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>8 oz black lentils</li>
+      <li>2 tbsp kidney beans(optional)</li>
+      <li>1 Large onion(chopped)</li>
+      <li>2 tomatoes(blended)</li>
+      <li>1 tbsp ginger-garlic paste</li>
+      <li>2 green chiles(chopped)</li>
+      <li>1 tsp cumin seeds</li>
+      <li>1 tsp chili powder</li>
+      <li>1 tsp garam masala</li>
+      <li>2 tbsp heavy cream</li>
+      <li>2 tbsp ghee</li>
+      <li>salt(to taste)</li>
+    </ul>
 
+    <h2>Preparation</h2>
+    <ol>
+       <li>Soak lentils (and rajma if using) overnight, or at least 6 hours.</li>
+      <li>Cook lentils in a pressure cooker with 3-4 cups of water and salt to taste until soft (6-8 whistles).</li>
+      <li>In a pan, add ghee, then add cumin seeds and onion. Cook until golden.</li>
+      <li>Add ginger-garlic paste and green chiles. Cook for one minute more.</li>
+      <li>Add tomatoes. Cook until soft.</li>
+      <li>Add spices (chili powder, garam masala, salt). Mix well.</li>
+      <li>Add cooked lentils to the pan. Stir and simmer for 15-20 minutes. You can add water if it's too thick for your liking.</li>
+      <li>Add cream and stir. Cook 2 minutes more.</li>
+    </ol>
 
-<nav>
-   <ul>
-       <li><a href="#One">Placeholder</a></li>
-       <li><a href="#Two">Placeholder</a></li>
-       <li><a href="groupProject.html">Homepage</a></li>
-      
-   </ul>
-</nav>
-
-</header>
-
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
-
-
-
-<div id="One">
-<h2><center>This is a placeholder</center></h2>
-<p></p>
-</div>
-
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
-
-
-
-<div id="Two">
-<h2><center>This is a placeholder</center></h2>
-<p></p>
-</div>
-
-<footer><p> hi i am just the footer eheheh </p>
-        <br>
-        <br>
-        <br>
-        <br>
-        <p> insert something here</p>
-</footer>
-
-
+    <h2>Watch How to Make Dal Makhani</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Et1SoDzEdHM?si=AK3uf9aD_Z5BVhuZ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  </div>
 </body>
 </html>
-
