--- a/groupProject.html
+++ b/groupProject.html
@@ -1,1212 +1,111 @@
 <!DOCTYPE HTML>
 <html>
-
 <head>
-<title> A Food trip around the world</title>
-<link rel="icon" type="image/x-icon" href="image2/food.jpg">
+  <title>A Food Trip Around the World</title>
+  <link rel="icon" type="image/x-icon" href="image2/food.jpg">
+  <link rel="stylesheet" type="text/css" href="structure.css">
+  <style>
+   .image-scroll {
+     padding: 2rem;
+     background-color: #f9890a;
+     text-align: center;
+   }
 
+   .image-scroll h2 {
+     margin-bottom: 1rem;
+     font-size: 1.5rem;
+     color: #e96c06;
+   }
+
+   .scroll-container {
+     display: flex;
+     overflow-x: auto;
+     gap: 1rem;
+     padding: 1rem 0;
+     scroll-snap-type: x mandatory;
+   }
+
+   .scroll-container img {
+     height: 200px;
+     border-radius: 12px;
+     flex-shrink: 0;
+     scroll-snap-align: start;
+     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+   }
+ </style>
 </head>
 
-
 <body bgcolor="orange">
-<br>
-<br>
-<link rel="stylesheet" type="text/css" href="structure.css">
-<header>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="Apofiah.html">Apofiah</a></li>
+        <li><a href="Darianne.html">Darianne</a></li>
+        <li><a href="Djamila.html">Djamila</a></li>
+        <li><a href="India.html">India</a></li>
+        <li><a href="Jaali.html">Jaali</a></li>
+        <li><a href="Aboubacar.html">Aboubacar</a></li>
+        <li><a href="Tiryn.html">Tiryn</a></li>
+        <li><a href="DeCamre.html">DeCamare</a></li>
+      </ul>
+    </nav>
+    <h1>Panther Plates</h1>
+    <img src="https://sdmntprsouthcentralus.oaiusercontent.com/files/00000000-fea4-61f7-8df7-44f0479c39ea/raw?se=2025-04-23T16%3A05%3A19Z&sp=r&sv=2024-08-04&sr=b&scid=d52149d7-303f-531b-8e81-88866af436d7&skoid=0abefe37-d2bd-4fcb-bc88-32bccbef6f7d&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-04-23T05%3A54%3A37Z&ske=2025-04-24T05%3A54%3A37Z&sks=b&skv=2024-08-04&sig=5suJ7WxpUYmOnB24TKHxoA%2BBj/eoFdOkBACp7z6D5xM%3D" alt="panther plates logo" style="display: block; margin: 0 auto; max-width: 50%; height: auto;">
+  </div>
+    <p class="tagline">
+      A visual journey through the world of food and culture. This group project was brought to you by: 
+      Apofiah, Jaali, Tyrin, India, Djamila, Darianne & Aboubacar.
+    </p>
+  </header>
 
-<h1><center>name here </center></b></h1>
+  <section class="hero">
+    <div class="overlay">
+      <h2>Celebrating Food, Culture, and Connection</h2>
+      <p>
+        For this group project, we aim to showcase the diverse and vibrant world of food through a collection 
+        of images that highlight various cuisines, flavors, and presentation styles from around the globe. 
+        Our goal is to celebrate the cultural significance of food, explore the creativity behind different 
+        dishes, and bring attention to the rich history and traditions associated with what we eat. From 
+        savory street food to elegant fine dining, this project will feature a wide array of food types, 
+        offering a visual feast that appeals to the senses and sparks curiosity about the culinary arts.
+      </p>
+      <img src="https://cdn.pixabay.com/photo/2018/03/06/21/43/heart-3204671_1280.png" alt="international flags heart shape" style="display: block; margin: 0 auto; max-width: 50%; height: auto;">
+  </div>
+      <p>
+        Each image tells a story, whether it's a home-cooked family recipe passed down through generations or 
+        a modern, innovative dish that challenges traditional boundaries. By featuring foods from different 
+        regions, we hope to highlight how ingredients, techniques, and cultural practices shape the way we 
+        experience food and bring people together. Ultimately, this project is not just about the food itself, 
+        but about the shared human experience that it represents — fostering connection, appreciation, and 
+        understanding across cultures.
+      </p>
+    </div>
+  </section>
 
-
-<nav>
-   <ul>
-       <li><a href="#Apofiah.html">Apofiah</a></li>
-       <li><a href="#Darianne.html">Darianne</a></li>
-       <li><a href="#Djamila.html">Djamila</a></li>
-       <li><a href="#India.html">India</a></li>
-       <li><a href="#Jaali.html">Jaali</a></li>
-       <li><a href="#Aboubacar.html">Aboubacar</a></li>
-       <li><a href="#Tiryn.html">Tiryn</a></li>
-      <li><a href="DeCamre.html">DeCamare</a></li>
-   </ul>
-</nav>
-
-</header>
-
-
-<main><p><center>Team 1's member</center></p></main>
-
-<br>
-<br>
-<br>
-<p> This group project was brought to you by: Apofiah, Jaalil, Tyrin , India , Djamila , Darianne & Aboubacar</p>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<p>For this group project, we aim to showcase the diverse and vibrant world of food through a collection of images that highlight various cuisines, flavors, and presentation styles from around the globe. Our goal is to celebrate the cultural significance of food, explore the creativity behind different dishes, and bring attention to the rich history and traditions associated with what we eat. From savory street food to elegant fine dining, this project will feature a wide array of food types, offering a visual feast that appeals to the senses and sparks curiosity about the culinary arts. 
-
-Each image tells a story, whether it's a home-cooked family recipe passed down through generations or a modern, innovative dish that challenges traditional boundaries. By featuring foods from different regions, we hope to highlight how ingredients, techniques, and cultural practices shape the way we experience food and bring people together. Ultimately, this project is not just about the food itself, but about the shared human experience that it represents, fostering connection, appreciation, and understanding across cultures.</p>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+  <section class="about">
+    <h2>Our Mission</h2>
+    <p>
+      We aim to showcase the diverse and vibrant world of food through a collection of images that highlight 
+      various cuisines, flavors, and presentation styles. From home-cooked family recipes to modern culinary 
+      innovations, each dish tells a story — one of tradition, creativity, and connection. Join us as we 
+      celebrate the cultural significance of food and the shared human experience it represents.
+    </p>
+    <section class="image-scroll">
+      <h2>Explore Global Flavors</h2>
+      <div class="scroll-container">
+        <img src="https://media.istockphoto.com/id/513124350/photo/cuisine-of-different-countries.jpg?s=1024x1024&w=is&k=20&c=6CNXDRx_cORdfSQGffM58vfCzd_oxA-bAHXuBiAYxO8=" alt="Dish 1">
+        <img src="https://media.istockphoto.com/id/1398334575/photo/bread-in-shape-world-map-on-white-plate-gold-fork-and-knife-on-a-dark-stone-background.jpg?s=1024x1024&w=is&k=20&c=NOYK4qEEmONut3W55O3iJstDt0NA6YHeg4m9blbFsVo=" alt="Dish 2">
+        <img src="https://cdn.pixabay.com/photo/2019/03/13/21/16/cookies-4053771_1280.jpg" alt="Dish 3">
+        <img src="https://cdn.pixabay.com/photo/2020/03/16/12/46/food-4936947_1280.jpg" alt="Dish 4">
+        <img src="https://cdn.pixabay.com/photo/2021/01/01/15/31/sushi-balls-5878892_1280.jpg" alt="Dish 5">
+        <img src="https://cdn.pixabay.com/photo/2016/11/29/12/15/berries-1869421_1280.jpg" alt="Dish 6">
 
 
-
-
-
-<div id="Apofiah">
-<h2><center>Apofiah's part</center></h2>
-<p></p>
-<a href="Apofiah.html">Let's get started</a>
-</div>
-
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<div id ="Darianne">
-<h3>Darianne's part</h3>
-<p></p>
-<a href="Darianne.html">Let's get started</a>
-</div>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
-
-
-
-<div id ="Djamila">
-<h4>Djamila's part</h4>
-<p></p>
-<a href="Djamila.html">Let's get started</a>
-</div>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
-
-
-
-<div id ="India">
-<h5>India's part</h5>
-<p></p>
-<a href="India.html">Let's get started</a>
-</div>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
-
-<div id ="Jaali">
-<h6>Jaali's part</h6>
-<p></p>
-<a href="Jaali.html">Let's get started</a>
-</div>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
-
-
-<div id ="Aboubacar">
-<h7>Aboubacar's part</h7>
-<p></p>
-<a href="Aboubacar.html">Let's get started</a>
-</div>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
-
-<div id ="Tiryn">
-<h8>Tiryn's part</h8>
-<p>................</p>
-<br
-<br>
-<a href="Tiryn.html">Let's get started</a>
-</div>
-
-
-
-<footer><p> Contact us if you got any questions </p>
-        <br>
-        <br>
-        <br>
-        <br>
-        <p> insert something here</p></footer>
-
+      </div>
+    </section>
+  </section>
+  <footer>
+    <p>&copy; 2025 Panther Plates Group Project. All rights reserved.</p>
+  </footer>
 </body>
 </html>
