--- a/Group-Project-2300 updated/Apofiah.html
+++ b/Group-Project-2300 updated/Apofiah.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="icon" type="image/x-icon" href="image2/food.jpg">
   <title>Italy: Pasta al Pomodoro</title>
   <style>
     body {
