--- a/Group-Project-2300 updated/Darianne.html
+++ b/Group-Project-2300 updated/Darianne.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Jamaica - Heartbeat of the Caribbean</title>
-  <link rel="icon" type="image/x-icon" href="Jerk Chicken.jpeg">
+  <link rel="icon" type="image/x-icon" href="image2/Jerk Chicken.jpeg">
   <link rel="stylesheet" type="text/css" href="secondary.css">
 
   <style>
