--- a/Group-Project-2300 updated/Jaali.html
+++ b/Group-Project-2300 updated/Jaali.html
@@ -1,259 +1,128 @@
-<!DOCTYPE HTML>
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title> A Food trip around the world</title>
-<link rel="icon" type="image/x-icon" href="image2/food.jpg">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title> Egg Fried Rice </title>
+  <style>
 
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
+  padding-top: 25px;
+  height: 0;
+  overflow: hidden;
+  border-radius: 12px;
+}
+
+.video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+    /* Reset and base styles */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body, html {
+      height: 100%;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: rgb(224, 70, 28);
+      color: #333;
+    }
+
+    /* Parallax Background */
+    .parallax {
+      background-image: url('DadsEggFriedrice.jpg');
+      height: 100vh;
+      background-attachment: fixed;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: rgb(28, 224, 162);
+      text-shadow: 2px 2px 10px rgba(0,0,0,0.7);
+    }
+
+    /* Content Section */
+    .content {
+      padding: 4rem 2rem;
+      text-align: center;
+    }
+
+    /* Neomorphic Card */
+    .card {
+      background: #ebeeae;
+      border-radius: 20px;
+      box-shadow: 9px 9px 16px #a3b1c6, -9px -9px 16px #ffffff;
+      padding: 2rem;
+      max-width: 600px;
+      margin: 2rem auto;
+      transition: all 0.3s ease;
+    }
+
+    .card:hover {
+      box-shadow: inset 5px 5px 10px #b8c6db, inset -5px -5px 10px #ffffff;
+    }
+
+    h1, h2 {
+      margin-bottom: 1rem;
+    }
+
+    @media (max-width: 768px) {
+      .card {
+        margin: 1rem;
+        padding: 1.5rem;
+      }
+    }
+  </style>
 </head>
+<body>
+  <div class="parallax">
+    <h1> 蛋炒饭 (dàn chǎo fàn) </h1>
+  </div>
+
+  <div class="content">
+    <div class="card">
+      <h2>Traditional Chinese Egg Fried Rice</h2>
+      <p> Breakdown:
+        蛋 (dàn): means "egg".
+        炒 (chǎo): means "stir-fry" or "fried".
+        饭 (fàn): means "rice" or "cooked rice </p>
+
+        <div class="card">
+            <h2>History</h2>
+            <p> Egg fried rice in Chinese cuisine has roots tracing back to
+                 the Sui Dynasty (589-618 AD) in China, where it was a practical way to utilize leftover rice and other
+                  ingredients. This humble dish, born from a need to prevent food waste, evolved into a popular and diverse staple. 
+                  The earliest fried rice dishes were likely made with millet or sorghum, but the modern version with eggs and rice became prominent during the Sui Dynasty.  </p>
+          </div>
+
+    </div>
+
+    <div class="card">
+        <h2>Recipe</h2>
+        <div class="video-container">
+          
+            <iframe width="560" height="315"
+             src="https://www.youtube.com/embed/tn0YTv4S9vI?si=a6bT7o9CQ_zQlFeF" 
+             title="YouTube video player" 
+             frameborder="0" 
+             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+             referrerpolicy="strict-origin-when-cross-origin" 
+             allowfullscreen></iframe>
+        </div>
+      </div>
 
 
-<body bgcolor="orange">
-<br>
-<br>
-<link rel="stylesheet" type="text/css" href="secondary.css">
-<header>
-
-<h1><center>Insert header name here </center></b></h1>
-
-
-<nav>
-   <ul>
-       <li><a href="#One">Placeholder</a></li>
-       <li><a href="#Two">Placeholder</a></li>
-       <li><a href="groupProject.html">Homepage</a></li>
-      
-   </ul>
-</nav>
-
-</header>
-
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
-
-
-
-<div id="One">
-<h2><center>This is a placeholder</center></h2>
-<p></p>
-</div>
-
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
-
-
-
-<div id="Two">
-<h2><center>This is a placeholder</center></h2>
-<p></p>
-</div>
-
-<footer><p> hi i am just the footer eheheh </p>
-        <br>
-        <br>
-        <br>
-        <br>
-        <p> insert something here</p>
-</footer>
-
-
+  </div>
 </body>
 </html>
-
