--- a/Group-Project-2300 updated/Jaali.html
+++ b/Group-Project-2300 updated/Jaali.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" type="image/x-icon" href="image2/food.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title> Egg Fried Rice </title>
   <style>
