--- a/Group-Project-2300 updated/Djamila.html
+++ b/Group-Project-2300 updated/Djamila.html
@@ -8,8 +8,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-image:url('https://upload.wikimedia.org/wikipedia/commons/3/31/Flag_of_Burkina_Faso.svg');
-      background-size: cover;;
+      background-image:url("https://upload.wikimedia.org/wikipedia/commons/3/31/Flag_of_Burkina_Faso.svg");
       background-size: cover;
       background-position: center;
       background-attachment: fixed;
@@ -79,7 +78,7 @@
 
 </header>
     <div class="container">
-    <img src="TO.png" alt="Tô Dish">
+    <img src="image2/to.jpg" alt="Tô Dish">
 
     <h2>About the Dish - Tô</h2>
     <p>
